2009-08-06	Xi Yang <hiyangxi@gmail.com>

	* pxa255/clock/clock.c: Adjust clock for Skyeye. Joel added empty
	nanoseconds since last tick handler.

2009-08-04	Xi Yang <hiyangxi@gmail.com>

	* pxa255/clock/clock.c: Move parentheses to improve math. More tests
	run.

2009-07-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am: Removed references to deleted file
	'../../libbsp/arm/shared/irq/irq_asm.S'.
	* s3c2410/irq/bsp_irq_asm.S, lpc22xx/irq/bsp_irq_asm.S,
	pxa255/irq/bsp_irq_asm.S, mc9328mxl/irq/bsp_irq_asm.S,
	at91rm9200/irq/bsp_irq_asm.S, s3c2400/irq/bsp_irq_asm.S: Renamed
	ExecuteITHandler() into bsp_interrupt_dispatch().

2009-07-10	Xi Yang <hiyangxi@gmail.com>

	* Makefile.am, pxa255/ffuart/ffuart.c, pxa255/include/pxa255.h,
	pxa255/pmc/pmc.c: Add PMC support.

2009-06-29	Xi Yang <hiyangxi@gmail.com>

	* pxa255/ffuart/ffuart.c, pxa255/include/pxa255.h: Add Skyeye support.
	* pxa255/include/bits.h: Removed.

2009-06-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* preinstall.am, pxa255/clock/clock.c, pxa255/ffuart/ffuart.c,
	pxa255/irq/bsp_irq_init.c, pxa255/timer/timer.c: Fix typos and update
	timer.

2009-06-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* pxa255/clock/clock.c: Add ON_SKYEYE option to enable fast idle mode.

2009-06-04	Xi Yang <hiyangxi@gmail.com>

	* Makefile.am, configure.ac, preinstall.am: New Gumstix BSP and PXA255
	support.
	* pxa255/clock/clock.c, pxa255/ffuart/ffuart.c, pxa255/include/bits.h,
	pxa255/include/ffuart.h, pxa255/include/pxa255.h,
	pxa255/irq/bsp_irq_asm.S, pxa255/irq/bsp_irq_init.c,
	pxa255/irq/irq.c, pxa255/irq/irq.h, pxa255/pmc/pmc.c,
	pxa255/timer/timer.c: New files.

2009-06-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* at91rm9200/dbgu/dbgu.c: Needed carriage return on newline.

2009-05-27	Fernando Nicodemos <fgnicodemos@terra.com.br>

	* at91rm9200/clock/clock.c: Add support for nanoseconds since last
	tick. The resolution is not that high but better than nothing.
